--- a/home.html
+++ b/home.html
@@ -7,28 +7,38 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Bootstrap CSS-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="#">
+  <link rel="stylesheet" href="style/main.css">
   <title>Tell A Tale</title>
 </head>
 
 <body class="container">
   <h1>Tell A Tale</h1>
-  <ul>
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link active" href="stories.html">Stories</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="login.html">Login</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="create.html">Create Account</a>
+    </li>
+  </ul>
+  <!-- <ul class="list-inline text-right">
     <a href="stories.html">
-      <li>Stories</li>
+      <li class="list-inline-item">Stories</li>
     </a>
     <a href="login.html">
-      <li>Login</li>
+      <li class="list-inline-item">Login</li>
     </a>
     <a href="create.html">
-      <li>Create Account</li>
+      <li class="list-inline-item">Create Account</li>
     </a>
-  </ul>
+  </ul> -->
   <!-- Button trigger modal -->
   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Modal">
     New Story
   </button>
-
   <!-- Modal -->
   <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
@@ -44,7 +54,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary">Save</button>
         </div>
       </div>
     </div>
