--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
   </div>
   <div id="">
     <nav>
-      <ul>
+      <ul id="ulhome">
         <li><a href="stories.html">Stories</a></li>
         <li><a href="login.html">Login</a></li>
         <li><a href="create.html">Create Account</a></li>
