add js for login

--- a/login.html
+++ b/login.html
@@ -13,12 +13,11 @@
   <h1>Login Page</h1>
   <div class="">
     <form name="login">
-      <label for="email">Email</label><br>
-      <input type="email" name="" placeholder="Enter Email">
-  </div>
-  <div class="">
+    <label for="email">Email</label><br>
+    <input type="email" name="email" placeholder="Enter Email">
+    <br>
     <label for="password">Password</label><br>
-    <input type="text" name="" placeholder="Enter Password"><br>
+    <input type="password" name="password" placeholder="Enter Password"><br>
     <input type="button" onclick="check(this.form)" value="Login" />
     <input type="reset" value="Cancel" />
     </form>
@@ -29,7 +28,7 @@
       <li><a href="#">Forgot Password</a></li>
     </ul>
   </div>
-  <script type="text/javascript" src="#"></script>
+  <script type="text/javascript" src="script/main.js"></script>
 </body>
 
 </html>
