--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
   </div>
   <div id="">
     <nav>
-      <ul id="ulhome">
+      <ul class="nav">
         <li><a href="stories.html">Stories</a></li>
         <li><a href="login.html">Login</a></li>
         <li><a href="create.html">Create Account</a></li>
@@ -46,6 +46,15 @@
       dignissimos numquam odit suscipit iure, ipsa esse voluptatum vero, quo rerum ab dicta. Quos excepturi rem recusandae illum exercitationem mollitia fuga velit facere aspernatur! Incidunt qui ab doloribus labore nesciunt perferendis iusto consequatur
       expedita dolorem nobis quasi quam, asperiores excepturi! Atque minus nobis fugiat animi, inventore dolor aut qui, distinctio omnis veniam accusamus provident itaque impedit quae, iure quibusdam dolores velit dolore modi doloremque consectetur laudantium
       excepturi! Similique.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci voluptatibus officiis modi aspernatur iure nesciunt, laudantium fuga aliquam necessitatibus et, repellat repellendus reiciendis odit totam odio deleniti delectus? Fuga dolores a ipsum,
+      dignissimos numquam odit suscipit iure, ipsa esse voluptatum vero, quo rerum ab dicta. Quos excepturi rem recusandae illum exercitationem mollitia fuga velit facere aspernatur! Incidunt qui ab doloribus labore nesciunt perferendis iusto consequatur
+      expedita dolorem nobis quasi quam, asperiores excepturi! Atque minus nobis fugiat animi, inventore dolor aut qui, distinctio omnis veniam accusamus provident itaque impedit quae, iure quibusdam dolores velit dolore modi doloremque consectetur laudantium
+      excepturi! Similique.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci voluptatibus officiis modi aspernatur iure nesciunt, laudantium fuga aliquam necessitatibus et, repellat repellendus reiciendis odit totam odio deleniti delectus? Fuga dolores a ipsum,
+      dignissimos numquam odit suscipit iure, ipsa esse voluptatum vero, quo rerum ab dicta. Quos excepturi rem recusandae illum exercitationem mollitia fuga velit facere aspernatur! Incidunt qui ab doloribus labore nesciunt perferendis iusto consequatur
+      expedita dolorem nobis quasi quam, asperiores excepturi! Atque minus nobis fugiat animi, inventore dolor aut qui, distinctio omnis veniam accusamus provident itaque impedit quae, iure quibusdam dolores velit dolore modi doloremque consectetur laudantium
+      excepturi! Similique.</p>
+
   </div>
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <script type="text/javascript" src="script/main.js"></script>
