--- a/newStory.html
+++ b/newStory.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>Tell A Tale</h1>
-  <ul>
+  <ul class="nav">
     <a href="#"><li>Stories</li></a>
     <a href="#"><li>Login</li></a>
     <a href="#"><li>Create Account</li></a>
