--- a/stories.html
+++ b/stories.html
@@ -8,7 +8,7 @@
   <title>Tell A Tale</title>
 </head>
 <body>
-  <h1>stories</h1>
+  <h1>Stories</h1>
   <script type="text/javascript" src="#"></script>
 </body>
 </html>
