rename file and add/update login and create file

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
     </nav>
   </div>
   <div class="">
-    <a href="newStory.html" class="button">New Story</a>
+    <a href="new-story.html" class="button">New Story</a>
   </div>
   <br>
   <div class="">
