--- a/new-story.html
+++ b/new-story.html
@@ -10,9 +10,9 @@
 <body>
   <h1>Tell A Tale</h1>
   <ul class="nav">
-    <a href="#"><li>Stories</li></a>
-    <a href="#"><li>Login</li></a>
-    <a href="#"><li>Create Account</li></a>
+    <a href="stories.html"><li>Stories</li></a>
+    <a href="login.html"><li>Login</li></a>
+    <a href="create.html"><li>Create Account</li></a>
   </ul>
 </body>
 </html>
