fix page linking

--- a/new-story.html
+++ b/new-story.html
@@ -8,11 +8,19 @@
   <title>Tell a Tale</title>
 </head>
 <body>
-  <h1>Tell A Tale</h1>
-  <ul class="nav">
-    <a href="stories.html"><li>Stories</li></a>
-    <a href="login.html"><li>Login</li></a>
-    <a href="create.html"><li>Create Account</li></a>
-  </ul>
+  <div id="">
+    <header>
+      <h1>Tell A Tale</h1>
+    </header>
+  </div>
+  <div id="">
+    <nav>
+      <ul class="nav">
+        <li><a href="stories.html">Stories</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="create.html">Create Account</a></li>
+      </ul>
+    </nav>
+  </div>
 </body>
 </html>
