--- a/stories.html
+++ b/stories.html
@@ -4,11 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="#">
+  <link rel="stylesheet" href="style/main.css">
   <title>Tell A Tale</title>
 </head>
 <body>
-  <h1>Stories</h1>
+  <div id="">
+    <header>
+      <h1>Tell A Tale</h1>
+    </header>
+  </div>
+  <div id="">
+    <nav>
+      <ul class="nav">
+        <li><a href="stories.html">Stories</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="create.html">Create Account</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="">
+    <a href="new-story.html" class="button">New Story</a>
+  </div>
   <script type="text/javascript" src="#"></script>
 </body>
 </html>
