--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
   <div class="">
     <form name="login">
       <label for="email">Email</label><br>
-      <input type="email" name="email" placeholder="Enter Email">
+      <input type="email" name="email1" placeholder="Enter Email">
       <br>
       <label for="password">Password</label><br>
       <input type="password" name="password" placeholder="Enter Password"><br>
