--- a/create.html
+++ b/create.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style/main.css">
+  <link rel="stylesheet" href="style/create.css">
   <title>Tell A Tale</title>
 </head>
 
 <body>
   <h1>Create Account</h1>
+  <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign Up</button>
   <div id="id01" class="modal">
     <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
     <form class="modal-content" action="">
@@ -33,13 +34,13 @@
         <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
         <div class="clearfix">
-          <button type="submit" class="signupbtn">Sign Up</button>
-          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+          <button type="submit" id="signupbtn">Sign Up</button>
+          <button type="button" onclick="document.getElementById('id01').style.display='none'" id="cancelbtn">Cancel</button>
         </div>
       </div>
     </form>
   </div>
-  <script type="text/javascript" src="script/main.js"></script>
+  <script type="text/javascript" src="script/create.js"></script>
 </body>
 
 </html>
