--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- <link rel="stylesheet" href="style/create.css"> -->
   <link rel="stylesheet" href="style/main.css">
   <title>Tell A Tale</title>
 </head>
@@ -20,7 +21,7 @@
       <ul class="nav">
         <li><a href="stories.html">Stories</a></li>
         <li><a href="login.html">Login</a></li>
-        <li><a href="create.html">Create Account</a></li>
+        <li><a href="#" onclick="document.getElementById('id01').style.display='block'">Create Account</a></li>
       </ul>
     </nav>
   </div>
@@ -54,8 +55,40 @@
       dignissimos numquam odit suscipit iure, ipsa esse voluptatum vero, quo rerum ab dicta. Quos excepturi rem recusandae illum exercitationem mollitia fuga velit facere aspernatur! Incidunt qui ab doloribus labore nesciunt perferendis iusto consequatur
       expedita dolorem nobis quasi quam, asperiores excepturi! Atque minus nobis fugiat animi, inventore dolor aut qui, distinctio omnis veniam accusamus provident itaque impedit quae, iure quibusdam dolores velit dolore modi doloremque consectetur laudantium
       excepturi! Similique.</p>
-
   </div>
+
+  <div id="id01" class="modal">
+    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+    <form class="modal-content" action="">
+      <div class="container">
+        <p>Please fill in this form to create an account.</p>
+        <hr>
+        <label for="email"><strong>Email</Strong></label>
+        <input type="text" placeholder="Enter Email" name="email" required>
+        <label for="psw"><strong>Password</strong></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+        <label for="psw-repeat"><strong>Repeat Password</strong></label>
+        <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+
+        <label id="gender"><strong>Gender</strong></label>
+        <input type="radio" name="msex" value="Male" /><span>Male</span>
+        <input type="radio" name="fsex" value="Female" /><span>Female</span>
+        <br>
+        <label for="date"><strong>Date of Birth</strong></label>
+        <input type="date" name="" value="">
+        <br>
+        <label>
+          <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+        </label>
+        <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+        <div class="clearfix">
+          <button type="submit" class="btn" id="signupbtn">Sign Up</button>
+          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="btn" id="cancelbtn">Cancel</button>
+        </div>
+      </div>
+    </form>
+  </div>
+
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <script type="text/javascript" src="script/main.js"></script>
 </body>
