--- a/new-story.html
+++ b/new-story.html
@@ -26,6 +26,7 @@
   <div id="id01" class="modal">
     <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
     <form class="modal-content" action="">
+      <h1>Create Account</h1>
       <div class="container">
         <p>Please fill in this form to create an account.</p>
         <hr>
