--- a/login.html
+++ b/login.html
@@ -29,6 +29,7 @@
     </ul>
   </div>
 
+  <!-- Create Account Modal -->
   <div id="id01" class="modal">
     <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
     <form class="modal-content" action="">
@@ -43,9 +44,13 @@
         <label for="psw-repeat"><strong>Repeat Password</strong></label>
         <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
 
-        <label id="gender"><strong>Gender</strong></label>
-        <input type="radio" name="msex" value="Male" /><span>Male</span>
-        <input type="radio" name="fsex" value="Female" /><span>Female</span>
+        <label id="gender"><strong>Gender</strong></label><br>
+        <input type="radio" name="gender" value="male"> Male
+        <input type="radio" name="gender" value="female"> Female
+        <input type="radio" name="gender" value="other"> Other
+        <br>
+        <label for="date"><strong>Date of Birth</strong></label><br>
+        <input type="date" name="" value="">
         <br>
         <label for="date"><strong>Date of Birth</strong></label>
         <input type="date" name="" value="">
