--- a/stories.html
+++ b/stories.html
@@ -40,11 +40,12 @@
         <label for="psw-repeat"><strong>Repeat Password</strong></label>
         <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
 
-        <label id="gender"><strong>Gender</strong></label>
-        <input type="radio" name="msex" value="Male" /><span>Male</span>
-        <input type="radio" name="fsex" value="Female" /><span>Female</span>
+        <label id="gender"><strong>Gender</strong></label><br>
+        <input type="radio" name="gender" value="male"> Male
+        <input type="radio" name="gender" value="female"> Female
+        <input type="radio" name="gender" value="other"> Other
         <br>
-        <label for="date"><strong>Date of Birth</strong></label>
+        <label for="date"><strong>Date of Birth</strong></label><br>
         <input type="date" name="" value="">
         <br>
         <label>
