--- a/create.html
+++ b/create.html
@@ -15,27 +15,37 @@
   <div id="id01" class="modal">
     <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
     <form class="modal-content" action="">
+      <h1>Create Account</h1>
       <div class="container">
         <p>Please fill in this form to create an account.</p>
         <hr>
-        <label for="email"><b>Email</b></label>
+        <label for="alias"><strong>Alias</Strong></label>
+        <input type="text" placeholder="Enter Alias" name="alias" required>
+
+        <label for="email"><strong>Email</Strong></label>
         <input type="text" placeholder="Enter Email" name="email" required>
 
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
+        <label id="gender"><strong>Gender</strong></label><br>
+        <input type="radio" name="gender" value="male"> Male
+        <input type="radio" name="gender" value="female"> Female
+        <input type="radio" name="gender" value="other"> Other
+        <br>
+        <label for="date"><strong>Date of Birth</strong></label><br>
+        <input type="date" name="" value="">
+        <br>
 
-        <label for="psw-repeat"><b>Repeat Password</b></label>
+        <label for="psw"><strong>Password</strong></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+        <label for="psw-repeat"><strong>Repeat Password</strong></label>
         <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
 
         <label>
           <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
         </label>
-
         <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
         <div class="clearfix">
-          <button type="submit" id="signupbtn">Sign Up</button>
-          <button type="button" onclick="document.getElementById('id01').style.display='none'" id="cancelbtn">Cancel</button>
+          <button type="submit" class="btn" id="signupbtn">Sign Up</button>
+          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="btn" id="cancelbtn">Cancel</button>
         </div>
       </div>
     </form>
